package org.example;

public enum CardName {
    WaterGoblin, FireGoblin, RegularGoblin,
    WaterTroll, FireTroll, RegularTroll,
    WaterElf, FireElf, RegularElf,
    WaterSpell, FireSpell, RegularSpell,
    Knight, Dragon, Ork, Kraken
}
