package org.example;

public enum CardType {
    MONSTER,
    SPELL
}
