package org.example;

public enum ElementType {
    WATER,
    FIRE,
    NORMAL
}
